# go2-phoenix

./: .gitattributes  .gitignore  CITATION.cff  README.md  go2_phoenix_deploy_prompt.txt  pyproject.toml
.github/workflows/: ci.yml
checkpoints/phoenix-flat-v4/: NEGATIVE_RESULT.md
configs/env/: base.yaml  flat.yaml  flat_perturb.yaml  flat_scratch.yaml  flat_slewhinge.yaml  flat_slewhinge_w5.yaml  flat_v3b_ft.yaml  flat_v4.yaml  perturbation.yaml  rough.yaml  slippery.yaml  stand.yaml  stand_v2.yaml  stand_v3.yaml
configs/replay/: variations.yaml
configs/sim2real/: deploy.yaml  deploy_stand_v2.yaml  deploy_stand_v3.yaml  deploy_v3b.yaml
configs/train/: adaptation.yaml  adaptation_ashfall.yaml  adaptation_loop_closure.yaml  adaptation_smoke.yaml  ppo.yaml  ppo_flat.yaml  ppo_flat_scratch.yaml  ppo_flat_slewhinge.yaml  ppo_flat_slewhinge_w5.yaml  ppo_flat_v3b_ft.yaml  ppo_flat_v4.yaml  ppo_stand.yaml  ppo_stand_v2.yaml  (+1 more)
deploy/: lab_prompt_2026-04-16.md
docker/: Dockerfile
docs/: LAB_CARD_2026-04-22.md  adapt_load_debug.md  architecture.dot  deploy_blocked_2026-04-14.md  deploy_mode_switch_runbook.md  dryrun_findings_2026-04-14.md  lab_findings_2026-04-16.md  lab_findings_2026-04-20.md  lab_findings_2026-04-21.md  lab_session_2026-04-16.md  pre_lab_gates_2026-04-17.md  pre_lab_stand_rollout_2026-04-17.json  pre_lab_stand_v3_rollout_2026-04-21.json  pre_lab_stand_v3_rollout_2026-04-21_4096envs.json  retrain_flat_scratch_2026-04-19.md  retrain_flat_slewhinge_2026-04-19.md  retrain_flat_v3b_ft_2026-04-19.md  retrain_stand_v2_2026-04-19.md  rollout_flat_scratch_flat_2026-04-19.json  rollout_flat_scratch_stand_2026-04-19.json  rollout_flat_slewhinge_flat_2026-04-19.json  rollout_flat_slewhinge_w5_flat_2026-04-19.json  rollout_flat_v3b_ft_flat_2026-04-19.json  rollout_flat_v3b_ft_stand_2026-04-19.json  rollout_stand_v2_2026-04-19.json  rollout_v3b_flat_2026-04-17.json  rollout_v3b_flat_perturb_2026-04-17.json  rollout_v3b_flat_trk_2026-04-17.json  rollout_v3b_perterm_smoke_2026-04-17.json  rollout_v3b_stand_2026-04-17.json  rollout_v4_flat_2026-04-17.json  rollout_v4_flat_baseline_2026-04-17.json  rollout_v4_flat_trk_2026-04-17.json  rollout_v4_stand_2026-04-17.json
scripts/: _activate.sh  adapt.sh  cuda_128_smoke.sh  demo.sh  deploy.sh  dry_run_policy.py  dryrun_pipeline.sh  estop_publisher.sh  eval_stand_v3.sh  export_stand_v3.sh  loop_closure.sh  lowcmd_inspect.py  replay.sh  train.sh  train_stand_v3.sh
tests/: test_apply_variations.py  test_bench_export.py  test_config_loader.py  test_curriculum.py  test_failure_detector.py  test_go2_env_cfg_rewards.py  test_lowcmd_bridge.py  test_mode_switch.py  test_motor_crc.py  test_observation.py  test_projected_gravity.py  test_reset_bridge.py  test_ros2_policy_node.py  test_safety.py  test_sim_integration.py  test_slew_sat_hinge.py  test_slew_saturation.py  test_trajectory_logger.py  test_trajectory_reader.py  test_variations.py  test_verify_deploy.py  test_video_compose_escape.py
(+56 files in other folders)
